--- a/signup.html
+++ b/signup.html
@@ -38,7 +38,7 @@
                     <textarea name = "bio"  placeholder = "Enter bio here..."class = "form-control-textarea"></textarea>
                 </div>
 
-                <div class = "form-group-container-login100-form-btn">
+                <div class = "signup-form-btn">
                     <button id="btn-signup" type="button">
                         Register
                     </button>
