--- a/signin.html
+++ b/signin.html
@@ -25,12 +25,10 @@
                         <span class="forgot-password"> <a href="#">Forgot Password?</a></span>
                     </div>
 
-                    <div class="createAccount">
-                        <button id="btn-createAccount" type="button">
-                            <a href="signup.html">Create Account</a>
-                        </button>
-                    </div>
-        
+                    <form>
+                        <button formaction="signup.html">Create New Account</button>
+                      </form>
+
                 </form>
 
             </div>
