users can now sign in with a valid email and password.

--- a/home.html
+++ b/home.html
@@ -4,6 +4,7 @@
         <title>PostBook</title>
     </head>
 <body>
+    <h1>Congrats, you're logged in. :)</h1>
     <h3>PostBook - Upload Post</h3>
     <div id="homeForm">
         <form id="blogForm">
