--- a/home.html
+++ b/home.html
@@ -1,21 +1,35 @@
 <!DOCTYPE html>
 <html>
-    <head>
-        <title>PostBook</title>
-    </head>
+
+<head>
+    <title>PostBook</title>
+
+
+
+    <!-- jQuery-->
+    <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js"
+        integrity="sha384-DfXdz2htPH0lsSSs5nCTpuj/zy4C+OGpamoFVy38MVBnE+IbbVYUew+OrCXaRkfj"
+        crossorigin="anonymous"></script>
+    <!-- The core Firebase JS SDK is always required and must be listed first -->
+    <script src="https://www.gstatic.com/firebasejs/7.24.0/firebase-app.js"></script>
+    <script src="https://www.gstatic.com/firebasejs/7.24.0/firebase-auth.js"></script>
+    <script src="https://www.gstatic.com/firebasejs/7.24.0/firebase-analytics.js"></script>
+    <script src="https://www.gstatic.com/firebasejs/7.24.0/firebase-storage.js"></script>
+    <script src="https://www.gstatic.com/firebasejs/7.24.0/firebase-firestore.js"></script>
+
+</head>
+
 <body>
     <h1>Congrats, you're logged in. :)</h1>
+    <button id="sign-out-button">Sign Out</button>
     <h3>PostBook - Upload Post</h3>
     <div id="homeForm">
         <form id="blogForm">
             <label for="postPic">Photo:</label>
-                <input type="file"
-                     name="postPic"
-                    id="postPic"
-                    name="postPic"><br>
-             <label for="postText">Blog Post</label>
-                 <textarea id="postText" form="blogForm" cols="70" rows="10"></textarea>
-             <input type="submit">
+            <input type="file" name="postPic" id="postPic" name="postPic"><br>
+            <label for="postText">Blog Post</label>
+            <textarea id="postText" form="blogForm" cols="70" rows="10"></textarea>
+            <input type="submit">
         </form>
     </div>
     <div id="listing">
@@ -27,5 +41,19 @@
             <li>UserN "photo" "blog link"</li>
         </ul>
     </div>
+
+    <script src="index.js"></script>
+
+    <!-- authenticator.js runs concurrently every second to check if user is authenticated. It will help go 
+    back to sign in page (index.html) if the user sign out-->
+    <script>
+        firebase.auth().onAuthStateChanged((user) => {
+            if (!user) {
+                window.location.href = "index.html"
+            }
+        });
+    </script>
+
 </body>
+
 </html>
