you can now finally create new user accounts

--- a/signup.html
+++ b/signup.html
@@ -18,8 +18,6 @@
     <script src="https://www.gstatic.com/firebasejs/7.24.0/firebase-storage.js"></script>
     <script src="https://www.gstatic.com/firebasejs/7.24.0/firebase-firestore.js"></script>
 
-<body style="background-color:gray;">
-</body>
 </head>
 
 <body>
@@ -30,27 +28,27 @@
             <h3>Sign Up</h3>
 
             <div class="form-wrapper">
-                <input id="firstName" type="firstName" placeholder="First Name" class="form-control">
+                <input id="sign_up_firstName" type="firstName" placeholder="First Name" class="form-control">
             </div>
 
             <div class="form-wrapper">
-                <input id="lastName" type="lastName" placeholder="Last Name" class="form-control">
+                <input id="sign_up_lastName" type="lastName" placeholder="Last Name" class="form-control">
             </div>
 
             <div class="form-wrapper">
-                <input id="email" type="email" placeholder="Email address" class="form-control">
+                <input id="sign_up_email" type="email" placeholder="Email address" class="form-control">
             </div>
 
             <div class="form-wrapper">
-                <input id="passoward" type="password" placeholder="Password" class="form-control">
+                <input id="sign_up_password" type="password" placeholder="Password" class="form-control">
             </div>
 
             <div class="form-wrapper">
-                <input id="confirm-passoward" type="password" placeholder="Confirm Password" class="form-control">
+                <input id="confirm-password" type="password" placeholder="Confirm Password" class="form-control">
             </div>
 
             <div class="form-wrapper">
-                <textarea name="bio" placeholder="Enter bio here..." class="form-control-textarea"></textarea>
+                <textarea name="bio" id="sign_up_bio" placeholder="Enter bio here..." class="form-control-textarea"></textarea>
             </div>
 
             <div class="signup-form-btn">
