--- a/home.html
+++ b/home.html
@@ -16,30 +16,115 @@
     <script src="https://www.gstatic.com/firebasejs/7.24.0/firebase-analytics.js"></script>
     <script src="https://www.gstatic.com/firebasejs/7.24.0/firebase-storage.js"></script>
     <script src="https://www.gstatic.com/firebasejs/7.24.0/firebase-firestore.js"></script>
+    
+    <style>
+            body {
+                background-color: #3b5998;
+            }
+            #wrapper {
+                margin-top: auto;
+                margin-left: auto;
+                margin-right: auto;
+                margin-bottom: auto;
+                padding-top: 5px;
+                padding-left: 10px;
+                padding-right: 10px;
+                padding-bottom: 5px;
+                background-color: #ffffff;
+                border: 5px solid#8b9dc3;
+                border-radius: 7px;
+            }
+            h1 {
+                margin: 5px;
+                padding: 0px;
+                text-align: center;
+            }
+            h3 {
+                margin: 0px;
+                padding: 0px;
+            }
+            #homeForm {
+                padding: 5px;
+                background-color: #f7f7f7;
+            }
+            #homeForm label {
+                display: block;
+                font-size: 1em;
+                font-weight: bold;
+            }
+            #homeForm textarea {
+                width: 100%;
+                height: 150px;
+                padding: 12px 20px;
+                box-sizing: border-box;
+                border: 2px solid #ccc;
+                border-radius: 4px;
+                background-color: #f8f8f8;
+                resize: none;
+            }
+            #listing ul {
+                list-style-type: none;
+                margin: 0;
+                padding: 0;
+            }
+            .outerli {
+                display: block;
+                width: 100%;
+                padding: 5px;
+                margin: 0px;
+            }
+            .innerul li {
+                display: block;
+                width: 50%;
+                text-align: center;
+                margin-left: auto;
+                margin-right: auto;
+                margin-top: 0px;
+                margin-bottom: 0px;
+                padding: 5px;
+                background-color:  #f7f7f7;
+            }
+        </style>
 
 </head>
 
 <body>
     <h1>Congrats, you're logged in. :)</h1>
     <button id="sign-out-button">Sign Out</button>
-    <h3>PostBook - Upload Post</h3>
+    <div id="wrapper">
+    <h1>PostBook - Upload Post</h1>
     <div id="homeForm">
         <form id="blogForm">
-            <label for="postPic">Photo:</label>
-            <input type="file" name="postPic" id="postPic" name="postPic"><br>
-            <label for="postText">Blog Post</label>
-            <textarea id="postText" form="blogForm" cols="70" rows="10"></textarea>
-            <input type="submit">
+            <label for="postPic">Picture:</label>
+                <input type="file"
+                     name="postPic"
+                    id="postPic"
+                    name="postPic"><br />
+             <label for="postText">New Post:</label>
+                 <textarea id="postText" form="blogForm"></textarea><br />
+             <input type="submit">
         </form>
     </div>
     <div id="listing">
         <ul>
-            <li>User1 "photo" "blog link"</li>
-            <li>User2 "photo" "blog link"</li>
-            <li>User3 "photo" "blog link"</li>
-            <li>User4 "photo" "blog link"</li>
-            <li>UserN "photo" "blog link"</li>
+            <li class="outerli"><ul class="innerul">
+                <li><h3>User1</h3></li>
+                <li><img src="elk.png"></li>
+                <li>blog link</li></ul></li>
+            <li class="outerli"><ul class="innerul">
+                <li><h3>User2</h3></li>
+                <li><img src="elk.png"></li>
+                <li>blog link</li></ul></li>
+            <li class="outerli"><ul class="innerul">
+                <li><h3>User3</h3></li>
+                <li><img src="elk.png"></li>
+                <li>blog link</li></ul></li>
+            <li class="outerli"><ul class="innerul">
+                <li><h3>User4</h3></li>
+                <li><img src="elk.png"></li>
+                <li>blog link</li></ul></li>
         </ul>
+    </div>
     </div>
 
     <script src="index.js"></script>
