--- a/home.html
+++ b/home.html
@@ -20,9 +20,30 @@
     <style>
             body {
                 background-color: #3b5998;
+                padding-top: 10px;
+            }
+            .button {
+                margin-left: 20px;
+                padding: 5px;
+                padding-bottom: 3px;
+                border-top: 2px solid #8b9dc3;
+                border-left: 2px solid #8b9dc3;
+                border-right: 2px solid #8b9dc3;
+                background-color: white;
+                border-bottom: none;
+                font-size: 1.3em;
+                font-family: "arial";
+                font-weight: bold;
+                text-decoration: none;
+                color: black;
+            }
+            .button:hover {
+                color: black;
+                background-color: #f7f7f7;
+                text-decoration: underline;
             }
             #wrapper {
-                margin-top: auto;
+                margin-top: 0px;
                 margin-left: auto;
                 margin-right: auto;
                 margin-bottom: auto;
@@ -31,17 +52,25 @@
                 padding-right: 10px;
                 padding-bottom: 5px;
                 background-color: #ffffff;
-                border: 5px solid#8b9dc3;
-                border-radius: 7px;
+                border: 2px solid#8b9dc3;
+                border-radius: 4px;
             }
             h1 {
-                margin: 5px;
+                margin-top: 5px;
+                margin-bottom: 5px;
+                margin-left: auto;
+                margin-right: auto;
                 padding: 0px;
+                width: 70%;
                 text-align: center;
+                font-family: "arial";
+                border: 2px solid #3b5998;
+                border-radius: 4px;
+                background-color: #8b9dc3;
             }
             h3 {
-                margin: 0px;
-                padding: 0px;
+                margin: 5px;
+                padding: 10px;
             }
             #homeForm {
                 padding: 5px;
@@ -68,31 +97,27 @@
                 padding: 0;
             }
             .outerli {
-                display: block;
-                width: 100%;
+                display: inline-block;
+                width: 30%;
                 padding: 5px;
-                margin: 0px;
+                margin: 10px;
+                border: 1px solid #ccc;
+                border-radius: 4px;
+                background-color: #f7f7f7;
             }
             .innerul li {
                 display: block;
-                width: 50%;
+                width: 100%;
                 text-align: center;
-                margin-left: auto;
-                margin-right: auto;
-                margin-top: 0px;
-                margin-bottom: 0px;
-                padding: 5px;
-                background-color:  #f7f7f7;
             }
         </style>
 
 </head>
 
 <body>
-    <h1>Congrats, you're logged in. :)</h1>
-    <button id="sign-out-button">Sign Out</button>
+    <a href="" class="button">Log off</a><a href="" class="button">View Profile</a>
     <div id="wrapper">
-    <h1>PostBook - Upload Post</h1>
+    <h1>Welcome to PostBook - Upload Post</h1>
     <div id="homeForm">
         <form id="blogForm">
             <label for="postPic">Picture:</label>
@@ -105,6 +130,7 @@
              <input type="submit">
         </form>
     </div>
+    <h1>View User Profiles</h1>
     <div id="listing">
         <ul>
             <li class="outerli"><ul class="innerul">
