--- a/home.html
+++ b/home.html
@@ -2,7 +2,7 @@
 <html>
 
 <head>
-    <title>PostBook</title>
+    <title>BlogBook</title>
 
 
 
@@ -115,9 +115,9 @@
 </head>
 
 <body>
-    <a href="" class="button">Log off</a><a href="" class="button">View Profile</a>
+    <a href="" class="button">Sign out</a><a href="" class="button">View Profile</a><a href="" class="button">Change Account Info</a>
     <div id="wrapper">
-    <h1>Welcome to PostBook - Upload Post</h1>
+    <h1>Welcome to BlogBook - Upload Post</h1>
     <div id="homeForm">
         <form id="blogForm">
             <label for="postPic">Picture:</label>
