added sign out button id

--- a/home.html
+++ b/home.html
@@ -115,7 +115,7 @@
 </head>
 
 <body>
-    <a href="" class="button">Sign out</a><a href="" class="button">View Profile</a><a href="" class="button">Change Account Info</a>
+    <a href="" class="button" id="sign-out-button">Sign out</a><a href="" class="button">View Profile</a><a href="" class="button">Change Account Info</a>
     <div id="wrapper">
     <h1>Welcome to BlogBook - Upload Post</h1>
     <div id="homeForm">
