added js code to generate html code dynamically so that it shows all signed up users

--- a/home.html
+++ b/home.html
@@ -132,7 +132,7 @@
     </div>
     <h1>View User Profiles</h1>
     <div id="listing">
-        <ul>
+        <!-- <ul> //TIL: I have copied this code to homepageHelper.js to manage live user data.
             <li class="outerli"><ul class="innerul">
                 <li><h3>User1</h3></li>
                 <li><img src="elk.png"></li>
@@ -149,9 +149,12 @@
                 <li><h3>User4</h3></li>
                 <li><img src="elk.png"></li>
                 <li>blog link</li></ul></li>
-        </ul>
+        </ul> -->
     </div>
     </div>
+
+    <!-- homepageHelper.js will help upload posts and show users -->
+    <script src="homepageHelper.js"></script>
 
     <script src="index.js"></script>
 
