--- a/signup.html
+++ b/signup.html
@@ -22,14 +22,14 @@
               background-color: #F5F5F5;
             }
 
-            .form-control-textarea{s
+            .form-control-textarea{
               border: 1px solid #333;
               display: block;
               width: 100%;
               height: 200px;
               padding: 0;
               margin-bottom: 25px;
-            }
+            
             }
             .accountLink{
             }
@@ -145,7 +145,7 @@
             </div>
 
             <div class="accountLink">
-                <a href="signin.html">Already have an account?</a>
+                <a href="index.html">Already have an account?</a>
             </div>
         </form>
     </div>
