--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
             background-repeat:no-repeat;
         }
 
-        .sign-in-form {
+        .inner {
             width: 400px;
             box-shadow: 0 0 3px 0 rgba(0,0,0,0.3);
             background: #ababab;
