--- a/home.html
+++ b/home.html
@@ -134,8 +134,10 @@
     <h1>View User Profiles</h1>
     <div id="listing">
         <h1>Loading users...</h1>
-        <!-- <ul> //TIL: I have copied this code to homepageHelper.js to manage live user data.
-            <li class="outerli"><ul class="innerul">
+         <ul> <!-- //TIL: I have copied this code to homepageHelper.js to manage live user data. -->
+<!-- homepageHelper.js will help upload posts and show users -->
+    <script src="homepageHelper.js"></script>
+<!--            <li class="outerli"><ul class="innerul">
                 <li><h3>User1</h3></li>
                 <li><img src="elk.png"></li>
                 <li>blog link</li></ul></li>
@@ -150,13 +152,12 @@
             <li class="outerli"><ul class="innerul">
                 <li><h3>User4</h3></li>
                 <li><img src="elk.png"></li>
-                <li>blog link</li></ul></li>
-        </ul> -->
+                <li>blog link</li></ul></li> -->
+        </ul>
     </div>
     </div>
 
-    <!-- homepageHelper.js will help upload posts and show users -->
-    <script src="homepageHelper.js"></script>
+    
 
     <script src="index.js"></script>
 
