--- a/home.html
+++ b/home.html
@@ -5,6 +5,9 @@
     <title>BlogBook</title>
 
 
+    <!-- BootStrap -->
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.5.3/dist/css/bootstrap.min.css"
+    integrity="sha384-TX8t27EcRE3e/ihU7zmQxVncDAy5uIKz4rEkgIXeMed4M0jlfIDPvg6uqKI2xXr2" crossorigin="anonymous">
 
     <!-- jQuery-->
     <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js"
@@ -31,7 +34,7 @@
                 border-right: 2px solid #8b9dc3;
                 background-color: white;
                 border-bottom: none;
-                font-size: 1.3em;
+                /* font-size: 1.3em; */
                 font-family: "arial";
                 font-weight: bold;
                 text-decoration: none;
@@ -128,8 +131,17 @@
                     accept="image/*"><br />
              <label for="postText">Description:</label>
                  <textarea id="postText" form="blogForm"></textarea><br />
-             <button type="submit" id="submit_post_button">Submit</button>
+                 <!-- Til: we need to specify type as "button" so that it doesn't post form/reload page every time we click this button -->
+             <button class="btn btn-primary" type="button" id="submit_post_button">Submit</button>
+            
+            
+             <div class="progress" style="margin-top: 10px;" >
+                <div class="progress-bar bg-success" id="upload_progress_bar" role="progressbar" style="width: 0%;" aria-valuenow="25" aria-valuemin="0" aria-valuemax="100">0%</div>
+              </div>
         </form>
+
+
+
     </div>
     <h1>View User Profiles</h1>
     <div id="listing">
