--- a/signup.html
+++ b/signup.html
@@ -167,7 +167,7 @@
 
                 //console.log("exists: " +doc.exists)
                 if (doc.exists){
-                    window.location.href = "home.html"
+                    window.location.href = "uploadImage.html"
                 }
                 
             }
