--- a/index.html
+++ b/index.html
@@ -48,6 +48,13 @@
 </head>
 
 <body>
+
+    <nav class="navbar bg-light navbar-light">
+        
+        <a class="navbar-brand" href="home.html">BlogBook</a>
+
+    </nav>
+
     <div class="wrapper" style="background-image: url('')">
 
         <div class="inner">
