--- a/uploadImage.html
+++ b/uploadImage.html
@@ -29,7 +29,7 @@
             padding: 0;
             overflow-x: hidden;
 
-            background: #919191;
+            background: #ffffff;
             background-image: url("like.jpg");
             background-size: cover;
             background-position: center;
@@ -39,7 +39,7 @@
         .inner {
             width: 400px;
             box-shadow: 0 0 3px 0 rgba(0, 0, 0, 0.3);
-            background: #ababab;
+            background: #ffffff;
             padding: 20px;
             margin: 20% auto 0;
             text-align: center;
@@ -48,6 +48,36 @@
 </head>
 
 <body>
+
+    <nav class="navbar navbar-expand-sm bg-light navbar-light">
+        
+        <a class="navbar-brand" href="home.html">BlogBook</a>
+
+        <ul class="navbar-nav mr-auto">
+
+            <li class="nav-item">
+                <a class="nav-link" href="home.html">Home</a>
+            </li>
+            
+            <li class="nav-item">
+                <a class="nav-link" href="profile.html">Profile</a>
+            </li>
+
+            <li class="nav-item">
+                <a class="nav-link" href="uploadImage.html">Image</a>
+            </l>
+
+            <li class="nav-item">
+                <a class="nav-link" href="index.html">Sign In</a>
+            </l>
+
+            <li class="nav-item">
+                <a class="nav-link" href="signup.html">Sign Up</a>
+            </l>
+
+        </ul>
+
+    </nav>
 
     <div class="inner">
         <h2>Upload Profile Picture</h2>
