Made changes on nav bar

--- a/uploadImage.html
+++ b/uploadImage.html
@@ -51,31 +51,7 @@
 
     <nav class="navbar navbar-expand-sm bg-light navbar-light">
         
-        <a class="navbar-brand" href="home.html">BlogBook</a>
-
-        <ul class="navbar-nav mr-auto">
-
-            <li class="nav-item">
-                <a class="nav-link" href="home.html">Home</a>
-            </li>
-            
-            <li class="nav-item">
-                <a class="nav-link" href="profile.html">Profile</a>
-            </li>
-
-            <li class="nav-item">
-                <a class="nav-link" href="uploadImage.html">Image</a>
-            </l>
-
-            <li class="nav-item">
-                <a class="nav-link" href="index.html">Sign In</a>
-            </l>
-
-            <li class="nav-item">
-                <a class="nav-link" href="signup.html">Sign Up</a>
-            </l>
-
-        </ul>
+        <a class="navbar-brand">BlogBook</a>
 
     </nav>
 
