--- a/index.html
+++ b/index.html
@@ -57,7 +57,7 @@
 
     <nav class="navbar navbar-expand-sm bg-light navbar-light">
         
-        <a class="navbar-brand" href="home.html">BlogBook</a>
+        <a class="navbar-brand">BlogBook</a>
 
         <ul class="navbar-nav mr-auto">
 
@@ -73,44 +73,42 @@
 
     </nav>
 
-    <div class="wrapper" style="background-image: url('')">
 
-        <div class="inner">
+    <div class="inner">
 
-            <form action="">
-                <h3>Sign In</h3>
+        <form action="">
+            <h2>Sign In</h2>
 
-                <div class="email">
-                    <input id="email" type="email" placeholder="Email Address" class="form-control">
-                </div>
+            <div class="email">
+                <input id="email" type="email" placeholder="Email Address" class="form-control">
+            </div>
 
-                <div class="password">
-                    <input id="password" type="password" placeholder="Password" class="form-control">
-                </div>
+            <div class="password">
+                <input id="password" type="password" placeholder="Password" class="form-control">
+            </div>
 
-                <div class="signIn">
-                    <button id="btn-signIn" type="button">
-                        Sign In
-                    </button>
-                </div>
+            <div class="signIn">
+                <button id="btn-signIn" type="button">
+                    Sign In
+                </button>
+            </div>
 
-                <div class="forgotPassword">
-                    <span class="forgot-password"> <a href="#">Forgot Password?</a></span>
-                </div>
+            <div class="forgotPassword">
+                <span class="forgot-password"> <a href="#">Forgot Password?</a></span>
+            </div>
 
-                <hr class="solid">
-                <h6>Don't have an account?</h6>
+            <hr class="solid">
+            <h6>Don't have an account?</h6>
 
 
-                <form>
-                    <button class="createAccount" formaction="signup.html">Create New Account</button>
-                </form>
-
+            <form>
+                <button class="createAccount" formaction="signup.html">Create New Account</button>
             </form>
 
-        </div>
+        </form>
 
     </div>
+
 
     <script src="index.js"></script>
     
