--- a/editProfile.html
+++ b/editProfile.html
@@ -68,9 +68,10 @@
                 <input id="lastName" type="test" placeholder="Last Name" class="form-control">
             </div>
 
-            <div class="enterBio">
-               <textarea name="bio" id="sign_up_bio" placeholder="Enter bio here..." class="form-control-textarea"></textarea>
-           </div>
+           <div class="form-group">
+            <h4>Bio</h4>
+            <textarea class="form-control" id="enterBio" rows="3"></textarea>
+          </div>
 
             <div class="saveEdit">
                 <button id="btn-saveEdit" type="button">
