--- a/index.html
+++ b/index.html
@@ -94,7 +94,7 @@
             </div>
 
             <div class="forgotPassword">
-                <span class="forgot-password"> <a href="#">Forgot Password?</a></span>
+                <span class="forgot-password"> <a href="forgottenpassword.html">Forgot Password?</a></span>
             </div>
 
             <hr class="solid">
