--- a/editProfile.html
+++ b/editProfile.html
@@ -58,7 +58,7 @@
     <div class="inner">
 
         <form action="">
-            <h2>Edit Profile</h2>
+            <h2>Change Account Information</h2>
 
             <div class="firstName">
                 <input id="firstName" type="text" placeholder="First Name" class="form-control">
