--- a/editProfile.html
+++ b/editProfile.html
@@ -42,6 +42,10 @@
             text-align: center;
         }
 
+        hr.solid {
+            border-top: 1px solid #bbb;
+        }
+
     </style>
 
 </head>
@@ -67,6 +71,8 @@
             <div class="lastName">
                 <input id="lastName" type="test" placeholder="Last Name" class="form-control">
             </div>
+
+            <hr class="solid">
 
            <div class="form-group">
             <h4>Bio</h4>
