changed the background color to blue

--- a/editProfile.html
+++ b/editProfile.html
@@ -26,7 +26,7 @@
             margin: 0;
             padding: 0;
             overflow-x: hidden;
-            background: #ffffff;
+            background: #3b5998;
             background-image: url("like.jpg");
             background-size: cover;
             background-position: center;
@@ -55,6 +55,14 @@
     <nav class="navbar navbar-expand-sm bg-light navbar-light">
         
         <a class="navbar-brand">BlogBook</a>
+
+        <ul class="navbar-nav mr-auto">
+
+            <li class="nav-item">
+                <a class="nav-link" href="home.html">Home</a>
+            </l>
+
+        </ul>
 
     </nav>
 
