--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
             margin: 0;
             padding: 0;
             overflow-x: hidden;
-            background: #ffffff;
+            background: #3b5998;
             background-image: url("like.jpg");
             background-size: cover;
             background-position: center;
