changed background & added reference to editProfile

--- a/editProfile.html
+++ b/editProfile.html
@@ -27,7 +27,7 @@
             padding: 0;
             overflow-x: hidden;
             background: #3b5998;
-            background-image: url("like.jpg");
+            background-image: url("painting.jpg");
             background-size: cover;
             background-position: center;
             background-repeat:no-repeat;
