users can now send password reset email.

--- a/forgottenpassword.html
+++ b/forgottenpassword.html
@@ -3,11 +3,24 @@
     <head>
         <meta charset="utf-8" />
         <title>Forgotten Password</title>
+
+            <!-- The core Firebase JS SDK is always required and must be listed first -->
+    <script src="https://www.gstatic.com/firebasejs/7.20.0/firebase-app.js"></script>
+    <script src="https://www.gstatic.com/firebasejs/7.20.0/firebase-analytics.js"></script>
+    <script src="https://www.gstatic.com/firebasejs/7.20.0/firebase-auth.js"></script>
+
+        <!-- jQuery -->
+        <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js"
+        integrity="sha384-DfXdz2htPH0lsSSs5nCTpuj/zy4C+OGpamoFVy38MVBnE+IbbVYUew+OrCXaRkfj"
+        crossorigin="anonymous"></script>
+
     </head>
 <body>
     <h2 style="text-align:center;">Forgotten Password?</h2>
     <p>Enter your email address below and we'll send a link to reset your password!</p>
-    <input id="Email-address" type="email" placeholder="Email Address"> 
-    <a href = "mailto: Email-address">Send Link</a>
+    <input id="password_reset_email" type="email" placeholder="Email Address"> 
+    <button type="button" id="send_password_reset_email">Send Link</button>
+
+    <script src="index.js"></script>
 </body>
 </html>
