--- a/profile.html
+++ b/profile.html
@@ -131,7 +131,7 @@
 
 <body>
 
-    <a href="home.html" class="button">Home</a><a href="editProfile.html" class="button">Edit Profile</a><a href="" class="button"
+    <a href="home.html" class="button">Home</a><a href="javascript:goToEditProfilePage()" class="button">Edit Profile</a><a href="" class="button"
         id="sign-out-button">Sign out</a>
 
     <div id="wrapper">
