--- a/home.html
+++ b/home.html
@@ -118,7 +118,7 @@
 </head>
 
 <body>
-    <a href="javascript:goToProfilePage()" class="button">View Profile</a><a href="editProfile.html" class="button">Change Account Info</a><a href="" class="button" id="sign-out-button">Sign out</a>
+    <a href="javascript:goToProfilePage()" class="button">View Profile</a><a href="javascript:goToEditProfilePage()" class="button">Edit Profile</a><a href="" class="button" id="sign-out-button">Sign out</a>
     <div id="wrapper">
     <h1>Welcome to BlogBook - Upload Post</h1>
     <div id="homeForm">
