--- a/profile.html
+++ b/profile.html
@@ -208,7 +208,7 @@
                                 <ul>
                                     <img src="${doc.data().imageUrl}"
                                         alt="blog picture" width="500" height="300">
-                                        <p style="float:right">${doc.data().description}</p>
+                                        <p>${doc.data().description}</p>
                                 </ul>
                             </div>
                             <hr>`
