added a anchor tag in forgottenpassword.html to navigate to signin page

--- a/forgottenpassword.html
+++ b/forgottenpassword.html
@@ -16,6 +16,7 @@
 
     </head>
 <body>
+    <a href="index.html">Home</a>
     <h2 style="text-align:center;">Forgotten Password?</h2>
     <p>Enter your email address below and we'll send a link to reset your password!</p>
     <input id="password_reset_email" type="email" placeholder="Email Address"> 
