--- a/signup.html
+++ b/signup.html
@@ -5,7 +5,11 @@
 <head>
     <meta charset="utf-8" />
     <title>Blogbook</title>
-        <body style="background-color: #ddd2c4;">
+        <body style="background-image: url('background_signup.jpg');">
+
+        <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.5.3/dist/css/bootstrap.min.css"
+            integrity="sha384-TX8t27EcRE3e/ihU7zmQxVncDAy5uIKz4rEkgIXeMed4M0jlfIDPvg6uqKI2xXr2" crossorigin="anonymous">
+
         </body>
         <style>
             .form-wrapper{
@@ -35,7 +39,7 @@
             }
 
             .inner {
-              border:7px solid #ece1d4;
+              border:7px solid #8b9dc3;
               padding: 5px;
               background: #fff;
               margin: auto;
@@ -67,14 +71,13 @@
             }
 
             .logo-inner{
-              border:7px solid #ece1d4;
-              padding: 5px;
+              border:7px solid #8b9dc3;
+              margin: 5px;
+              padding: 3px;
               background: #fff;
-              max-width: 100px;
+              max-width: 120px;
               font-size: 20px;
               text-align:center;
-              padding:25px;
-              padding-top: 0px;
               max-height: 50px;
             }
         </style>
