--- a/home.html
+++ b/home.html
@@ -21,10 +21,13 @@
     <script src="https://www.gstatic.com/firebasejs/7.24.0/firebase-firestore.js"></script>
     
     <style>
+        /* padding-top pushes buttons down a little bit from beginning of webpage. Overall color scheme is like Facebook*/
             body {
                 background-color: #3b5998;
                 padding-top: 10px;
             }
+        /* margin-left pushes buttons to the right and each successive button pushes off of the button to its left.
+        buttons sits flush with top of wrapper. No bottom border is necesssary. There is text-decoration upon rollover (hover).*/
             .button {
                 margin-left: 20px;
                 padding: 5px;
@@ -45,6 +48,7 @@
                 background-color: #f7f7f7;
                 text-decoration: underline;
             }
+        /*since margin-top is 0, buttons sit flush with wrapper. padding distances content from border */
             #wrapper {
                 margin-top: 0px;
                 margin-left: auto;
@@ -58,6 +62,8 @@
                 border: 2px solid#8b9dc3;
                 border-radius: 4px;
             }
+        /*added border, background color and a large width to make the h1 heading seem important
+        adds division between blog post input section and view user blog section */
             h1 {
                 margin-top: 5px;
                 margin-bottom: 5px;
@@ -71,19 +77,23 @@
                 border-radius: 4px;
                 background-color: #8b9dc3;
             }
+        /* for user name in blog profile box on view profile section */
             h3 {
                 margin: 5px;
                 padding: 10px;
             }
+        /* extra padding for the form */
             #homeForm {
                 padding: 5px;
                 background-color: #f7f7f7;
             }
+        /* label is a block to cause input boxes to appear beneath */
             #homeForm label {
                 display: block;
                 font-size: 1em;
                 font-weight: bold;
             }
+        /* for blog post input */
             #homeForm textarea {
                 width: 100%;
                 height: 150px;
@@ -94,11 +104,13 @@
                 background-color: #f8f8f8;
                 resize: none;
             }
+        /* for the boxes that contain the user information under "view profiles" */
             #listing ul {
                 list-style-type: none;
                 margin: 0;
                 padding: 0;
             }
+        /* for one box with rounded borders */
             .outerli {
                 display: inline-block;
                 width: 30%;
@@ -108,6 +120,7 @@
                 border-radius: 4px;
                 background-color: #f7f7f7;
             }
+        /* for the items within the box */
             .innerul li {
                 display: block;
                 width: 100%;
@@ -118,6 +131,7 @@
 </head>
 
 <body>
+    <!-- buttons -->
     <a href="javascript:goToProfilePage()" class="button">View Profile</a><a href="javascript:goToEditProfilePage()" class="button">Edit Profile</a><a href="" class="button" id="sign-out-button">Sign out</a>
     <div id="wrapper">
     <h1>Welcome to BlogBook - Upload Post</h1>
