--- a/home.html
+++ b/home.html
@@ -187,8 +187,8 @@
 
     <script src="index.js"></script>
 
-    <!-- authenticator.js runs concurrently every second to check if user is authenticated. It will help go 
-    back to sign in page (index.html) if the user sign out-->
+    <!-- Runs when authentication state of the webpage is changed to check if user is authenticated. 
+        it will take the user to SignIn Page (index.html) if the user signs out-->
     <script>
         firebase.auth().onAuthStateChanged((user) => {
             if (!user) {
