--- a/forgottenpassword.html
+++ b/forgottenpassword.html
@@ -13,11 +13,25 @@
         <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js"
         integrity="sha384-DfXdz2htPH0lsSSs5nCTpuj/zy4C+OGpamoFVy38MVBnE+IbbVYUew+OrCXaRkfj"
         crossorigin="anonymous"></script>
+        <style>
+            h2.thicker {
+               color:blue;
+               text-align: center;
+               font: size 40px; 
+               background-color: darkblue;
+            }
+            p.thick {
+                color:black;
+                text-align: center;
+                font: size 24px;
+                background-color: gray;
+            }
+        </style>
 
     </head>
 <body>
     <a href="index.html">Home</a>
-    <h2 style="text-align:center;">Forgotten Password?</h2>
+    <h2>Forgotten Password?</h2>
     <p>Enter your email address below and we'll send a link to reset your password!</p>
     <input id="password_reset_email" type="email" placeholder="Email Address"> 
     <button type="button" id="send_password_reset_email">Send Link</button>
